add install param

--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -52,13 +52,18 @@ param 5：fisco-bcos获取方式   0的意思直接从服务器download一个二
 
 param 6：fisco-bcos版本号，用于获取二进制后进行版本比较，是否达到期望
 
-param 6：分支
+param 7：分支
+
+param 8：代码拉取地址，可选，如果不传则默认为https://github.com/FISCO-BCOS/FISCO-BCOS.git
 
 ### 2.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
+#不传代码拉取地址，会从默认地址https://github.com/FISCO-BCOS/FISCO-BCOS.git拉取
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'install' '0' '2.0.0-rc3' 'master'
+#传入代码拉取地址，则从传入地址拉取
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'install' '0' '2.0.0-rc3' 'master' 'https://github.com/FISCO-BCOS/FISCO-BCOS.git'
 ```
 
 ## 第三章 创建节点
