add how to use console parameter rule

--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -70,7 +70,7 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'install' '0' '2.0.0-rc3' 'ma
 
 ### 3.1 脚本说明
 
-该脚本主要做build chain操作，会新建目录~/autotest/FISCO-BCOS/tools/nodes
+该脚本主要做build chain操作，会新建目录~/autotest/FISCO-BCOS/tools/nodes。支持rocksdb，mysql，external三种方式
 
 ### 3.2 脚本参数说明
 
@@ -86,17 +86,30 @@ param 5：ipconf，多IP用竖线隔开
 
 param 6：port起始值，具体格式为p2p,channel,jsonrpc
 
+param 7：db类型（rocksdb，mysql，external），可选，默认为rocksdb
+
 ### 3.3 执行脚本
 
 ```shell
+#rocksdb
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641'
+#mysql
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'mysql'
+#external
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'external'
 ```
 
 ## 第四章 节点分发
 
 ### 4.1 脚本说明
 
-该脚本主要做分发节点操作，会备份和新建目录  ~/autotest/机器对应IP
+该脚本主要做分发节点操作，会备份和新建目录  ~/autotest/机器对应IP。
+
+分发过程中执行的动作包括：
+
+1. 根据IP列表对相应机器进行clean动作
+2. 如果是mysql，则会做drop database操作；如果是external，则会做drop database操作和传相应的amdb目录
+3. 传ip对应的目录
 
 ### 4.2 脚本参数说明
 
@@ -250,7 +263,7 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'java-cp' 'org.fisco.bcos.cha
 
 ### 9.1 脚本说明
 
-该脚本主要是安装console
+该脚本主要是安装console，所需的sdk和xml默认从本机的node0获取。支持分发console到其他机器。
 
 ### 9.2 脚本参数说明
 
@@ -270,7 +283,18 @@ param 6：分支
 
 ```shell
 dos2unix sh itools.sh
+#安装console，如果不传分支，则会取默认分支master
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '1' 'master'
+#成功安装完console后再做简单调用
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '1' 'master' 's 2#getSealerList'
+#安装console，不做调用，然后将本机~/autotest/console目录传到其他机器的~/autotest目录下
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '1' 'master' '' '10.107.108.10,wangyang,Aa12345!|10.107.108.11,wangyang,Aa12345!'
+#不安装console，简单调用
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' 's 2#getSealerList'
+#不安装console，也不做调用，只是将本机~/autotest/console目录传到其他机器的~/autotest目录下
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' '' '10.107.108.10,wangyang,Aa12345!|10.107.108.11,wangyang,Aa12345!'
+
+
 ```
 
 ## 第十章 console调用
@@ -295,7 +319,35 @@ param 6：当param 5为0，则该参数传入具体执行的命令，如果param
 
 param 7：param 5为1时有效，传入具体执行的命令
 
-### 9.3 执行脚本
+### 9.3 命令参数用法解析
+
+参数格式，4个字段，每个字段以|隔开：需要执行的命令|模式|期望值|断言（true或false）
+
+1. 第一个字段（需要执行的命令），可以传入多个命令，命令之间以#隔开
+
+2. 第二个字段（模式），有两种模式：
+
+   1的意思是执行命令后，通过第三个字段的期望值从结果日志中查找，如果第四个字段为true，则找到期望值则为断言成功；如果第四个字段为false，则找不到期望值为断言成功。
+
+   2的意思是将结果存入指定变量中，方便后面使用。
+
+3. 第三个字段（期望值），如果模式为1，这里填入期望值就可以；如果模式为2，这里可以填入具体变量存入的方式（变量名:变量获取方式  如果要存入多个变量，每组可以用分号隔开），其中变量存入有几种方式：
+
+   ​       单值返回，然后存入变量。例如：v_gbn_console
+
+   ​       键值对返回（key:value），通过键查询值存入变量。例如：v_get_address:contract address
+
+   ​       通过函数调用返回（需要定制）。例如：v_gbn_console_0x:func(dec2hex ${v_gbn_console})
+
+   ​                                                                  getSealerList|2|v_test;v_test1:func(c_split ${v_test} "," 1)
+
+   ​        通过jq精准解析jason。例如：v_getBlockByHash_transactions:jq(.transactions[0])
+
+4. 。
+
+5. 第四个字段（断言），需要和模式1配合使用，对于模式二不起作用，传空就可以。
+
+### 9.4 执行脚本
 
 ```shell
 dos2unix sh itools.sh
