--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -70,7 +70,7 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'install' '0' '2.0.0-rc3' 'ma
 
 ### 3.1 脚本说明
 
-该脚本主要做build chain操作，会新建目录~/autotest/FISCO-BCOS/tools/nodes。支持rocksdb，mysql，external三种方式
+该脚本主要做build chain操作，会新建目录~/autotest/FISCO-BCOS/tools/nodes。支持rocksdb，mysql，external三种方式。创建节点完成后，每个节点对应的nodeid会默认保存在变量里面，比如10.107.108.47里node0节点ID就保存在变量10.107.108.47_node0中，后面在console中可以这样获取出来\${10.107.108.47\_node0}
 
 ### 3.2 脚本参数说明
 
@@ -97,6 +97,8 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'mysql'
 #external
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'external'
+#raft  账户文件名会自动保存在变量v_acct_p12和v_acct_pem中
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'rocksdb|raft'
 ```
 
 ## 第四章 节点分发
@@ -299,11 +301,11 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' '' '10.107.108.
 
 ## 第十章 console调用
 
-### 9.1 脚本说明
+### 10.1 脚本说明
 
 该脚本主要是console调用
 
-### 9.2 脚本参数说明
+### 10.2 脚本参数说明
 
 param 1：执行机器IP
 
@@ -319,17 +321,21 @@ param 6：当param 5为0，则该参数传入具体执行的命令，如果param
 
 param 7：param 5为1时有效，传入具体执行的命令
 
-### 9.3 命令参数用法解析
+param 8：pem或者p12方式启动
+
+### 10.3 命令参数用法解析
 
 参数格式，4个字段，每个字段以|隔开：需要执行的命令|模式|期望值|断言（true或false）
 
 1. 第一个字段（需要执行的命令），可以传入多个命令，命令之间以#隔开
 
-2. 第二个字段（模式），有两种模式：
+2. 第二个字段（模式），有三种模式：
 
    1的意思是执行命令后，通过第三个字段的期望值从结果日志中查找，如果第四个字段为true，则找到期望值则为断言成功；如果第四个字段为false，则找不到期望值为断言成功。
 
    2的意思是将结果存入指定变量中，方便后面使用。
+
+   3的意思是用户自定义存储变量，方便后面使用。
 
 3. 第三个字段（期望值），如果模式为1，这里填入期望值就可以；如果模式为2，这里可以填入具体变量存入的方式（变量名:变量获取方式  如果要存入多个变量，每组可以用分号隔开），其中变量存入有几种方式：
 
@@ -343,11 +349,9 @@ param 7：param 5为1时有效，传入具体执行的命令
 
    ​        通过jq精准解析jason。例如：v_getBlockByHash_transactions:jq(.transactions[0])
 
-4. 。
+4. 第四个字段（断言），需要和模式1配合使用，对于模式二不起作用，传空就可以。
 
-5. 第四个字段（断言），需要和模式1配合使用，对于模式二不起作用，传空就可以。
-
-### 9.4 执行脚本
+### 10.4 执行脚本
 
 ```shell
 dos2unix sh itools.sh
@@ -368,15 +372,23 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' 'deploy HelloWo
 
 #变量存储，通过jason解析获取，这里模式给2。如果console命令返回的结果是标准jason结构，可以用jq()方式进行解析
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' 'getBlockByHash ${v_getBlockByNumber_hash}|2|v_getBlockByHash_blockhash:hash;v_getBlockByHash_logsBloom:logsBloom;v_getBlockByHash_number:number;v_getBlockByHash_parentHash:parentHash;v_getBlockByHash_sealer:sealer;v_getBlockByHash_stateRoot:stateRoot;v_getBlockByHash_timestamp:timestamp;v_getBlockByHash_transactionsRoot:transactionsRoot;v_getBlockByHash_transactions:jq(.transactions[0])'
+
+#自定义变量存储
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' '|3|test:wangyang;test1:aaaaa'
+
+#pem方式启动
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' 's 2#getSealerList' '' 'pem'
+#p12方式启动
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'console' '0' 's 2#getSealerList' '' 'p12'
 ```
 
 ## 第十一章 检查节点打包是否正常
 
-### 10.1 脚本说明
+### 11.1 脚本说明
 
 该脚本主要是根据关键字检查节点运行日志，比如打包是否正常
 
-### 10.2 脚本参数说明
+### 11.2 脚本参数说明
 
 param 1：执行机器IP
 
@@ -390,7 +402,7 @@ param 5：关键字|groupid（多个以空格隔开）
 
 param 6：节点目录名，该参数可选，如果不传，则检查所有节点的日志，否则检查传入节点的日志
 
-### 10.3 执行脚本
+### 11.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
@@ -398,15 +410,17 @@ dos2unix sh itools.sh
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'check_dyn_log' '++++++++|1 2'
 #检查节点node0中group1和group2是否都打包正常
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'check_dyn_log' '++++++++|1 2' 'node0'
+#根据IP列表检查所有机器所有节点是否都打包正常
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'check_dyn_log' '++++++++|1 2' '' '10.107.108.10,wangyang,Aa12345!|10.107.108.11,wangyang,Aa12345!'
 ```
 
 ## 第十二章 curl调用
 
-### 10.1 脚本说明
+### 12.1 脚本说明
 
 该脚本主要针对命令行curl调用rpc，具体用法可以参考console调用。
 
-### 10.2 脚本参数说明
+### 12.2 脚本参数说明
 
 param 1：执行机器IP
 
@@ -420,7 +434,7 @@ param 5：操作命令，可以多组，每组以#隔开
 
 param 6：rpc对应地址和端口
 
-### 10.3 执行脚本
+### 12.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
@@ -433,11 +447,11 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'curl' '{"jsonrpc":"2.0","met
 
 ## 第十三章 配置文件修改
 
-### 10.1 脚本说明
+### 13.1 脚本说明
 
 该脚本主要为了能根据指定规则修改或者添加config.ini和group.1.ini之类的配置文件
 
-### 10.2 脚本参数说明
+### 13.2 脚本参数说明
 
 param 1：执行机器IP
 
@@ -449,7 +463,7 @@ param 4：opt_for_cfg
 
 param 5：操作命令，格式： 指令|节点名|配置文件名|配置文件中的区域名（如果只是set这个可以给空）|具体操作|
 
-### 10.3 执行脚本
+### 13.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
@@ -465,11 +479,11 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'opt_for_cfg' 'set|node0|grou
 
 ## 第十四章 删除节点数据
 
-### 10.1 脚本说明
+### 14.1 脚本说明
 
 该脚本主要为了根据节点数据类型去删除节点对应的rocksdb或者mysql数据，删除前会先停进程。
 
-### 10.2 脚本参数说明
+### 14.2 脚本参数说明
 
 param 1：执行机器IP
 
@@ -481,7 +495,7 @@ param 4：del_node_data
 
 param 5：操作命令，多节点用#隔开。格式： 节点1|groupid1,groupid2#节点2|groupid1
 
-### 10.3 执行脚本
+### 14.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
@@ -490,5 +504,174 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'del_node_data' 'node0|1,2'
 
 #删除节点node0中group1和group2的数据，并且删除节点node1的group1数据
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'del_node_data' 'node0|1,2#node1|1'
+```
+
+## 第十五章 断言
+
+### 15.1 脚本说明
+
+该脚本主要为了比较变量大小，包括字符串和数字比较，支持==  !=  >=  <=  >  <  ||  &&
+
+如果是字符串比较需要加双引号（"\${test1}"=="\${test2}"），如果是数值比较（\${test1}==\${test2}），不用加双引号
+
+### 15.2 脚本参数说明
+
+param 1：执行机器IP
+
+param 2：执行机器用户名
+
+param 3：执行机器密码
+
+param 4：judge
+
+param 5：断言表达式
+
+### 15.3 执行脚本
+
+```shell
+dos2unix sh itools.sh
+#字符串比较变量test1和变量test2是否相等
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'judge' '"${test1}"=="${test2}"'
+
+#数值比较变量test1和变量test2大小
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'judge' '${test1}>=${test2}&&${test1}<=${test3}'
+```
+
+## 第十六章 iptables调用
+
+### 16.1 脚本说明
+
+该脚本主要为了调用iptables
+
+### 16.2 脚本参数说明
+
+param 1：执行机器IP
+
+param 2：执行机器用户名
+
+param 3：执行机器密码
+
+param 4：iptables
+
+param 5：操作类型   -I:新增    -D:删除
+
+param 6：设置列表，每组以#隔开
+
+### 16.3 执行脚本
+
+```shell
+dos2unix sh itools.sh
+#设置多IP，多操作方式
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'iptables' '-I' '10.107.108.10|DROP#10.107.108.10|REJECT'
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'iptables' '-I' '10.107.108.10|DROP#10.107.108.10|DROP'
+
+#删除设置
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'iptables' '-D' '10.107.108.10|DROP#10.107.108.10|REJECT'
+```
+
+## 第十七章 wondershaper调用
+
+### 17.1 脚本说明
+
+该脚本主要为了调用wondershaper
+
+### 17.2 脚本参数说明
+
+param 1：执行机器IP
+
+param 2：执行机器用户名
+
+param 3：执行机器密码
+
+param 4：wondershaper
+
+param 5：操作类型   -I:新增    -D:删除
+
+param 6：设置参数    网卡设备|上行最大值|下行最大值|间隔秒数|总循环次数
+
+### 17.3 执行脚本
+
+```shell
+dos2unix sh itools.sh
+#设置
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'wondershaper' '-I' 'eth0|100|50|5|3'
+
+#删除设置
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'wondershaper' '-D' 'eth0|100|50|5|3'
+```
+
+## 第十八章 tc调用
+
+### 18.1 脚本说明
+
+该脚本主要为了调用tc
+
+### 18.2 脚本参数说明
+
+param 1：执行机器IP
+
+param 2：执行机器用户名
+
+param 3：执行机器密码
+
+param 4：tc
+
+param 5：操作类型   -I:新增    -D:删除
+
+param 6：设置参数 
+
+​              网络延迟，网卡的传输设置为延迟 100 毫秒发送：
+
+​                            dev eth0 root netem delay 100ms
+
+​              网络延迟，网卡的传输设置为延迟 100ms ± 10ms (90 ~ 110 ms 之间的任意值)发送               
+
+### 18.3 执行脚本
+
+```shell
+dos2unix sh itools.sh
+#网络延迟，网卡的传输设置为延迟 100 毫秒发送
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem delay 100ms'
+#网络延迟，网卡的传输设置为延迟 100ms ± 10ms (90 ~ 110 ms 之间的任意值)发送
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem delay 100ms 10ms'
+#网络丢包，随机丢掉 1% 的数据包
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem loss 1%'
+#数据包重复，随机产生 1% 的重复数据包
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem duplicate 1%'
+#数据包损坏，随机产生 0.2% 的损坏的数据包
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem corrupt 0.2%'
+#数据包乱序，有 25% 的数据包(50%相关)会被立即发送,其他的延迟10 秒
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-I' 'dev eth0 root netem delay 10ms reorder 25% 50%'
+
+#删除设置
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'tc' '-D' 'dev eth0 root netem delay 100ms'
+```
+
+## 第十九章 web3sdk jar包替换
+
+### 19.1 脚本说明
+
+该脚本主要为了快捷替换web3sdk jar包（目录基于autotest目录），支持替换console和amdb中的web3sdk jar包。
+
+### 19.2 脚本参数说明
+
+param 1：执行机器IP
+
+param 2：执行机器用户名
+
+param 3：执行机器密码
+
+param 4：replace_web3sdk_jar
+
+param 5：替换版本号
+
+param 6：设置列表，每组以#隔开   IP,用户名,密码|amdb或者console    
+
+### 19.3 执行脚本
+
+```shell
+dos2unix sh itools.sh
+#替换10.107.108.47，10.107.108.10，10.107.108.11上所有amdb和console目录下的web3sdk jar包
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'replace_web3sdk_jar' '2.0.4' '10.107.108.47,wangyang,Aa12345!|amdb,console#10.107.108.10,wangyang,Aa12345!|amdb,console#10.107.108.11,wangyang,Aa12345!|amdb,console'
 ```
 
