--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -22,7 +22,9 @@ param 4：clean
 
 param 5：IP列表，可选，如果不传，则操作当前机器，每台机器以竖线隔开
 
-IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2
+IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2,PORT,PROMPT
+
+PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 
 ### 1.3 执行脚本
 
@@ -86,7 +88,7 @@ param 5：ipconf，多IP用竖线隔开
 
 param 6：port起始值，具体格式为p2p,channel,jsonrpc
 
-param 7：db类型（rocksdb，mysql，external），可选，默认为rocksdb
+param 7：db类型（rocksdb/mysql/external）|共识算法类型（默认为pbft）|内外网ip映射(内网IP=外网IP  多组用逗号隔开)
 
 ### 3.3 执行脚本
 
@@ -99,6 +101,8 @@ sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'external'
 #raft  账户文件名会自动保存在变量v_acct_p12和v_acct_pem中
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'rocksdb|raft'
+#内网IP映射成外网IP
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'buildchain' '10.107.108.47:3 agency1 1,2|10.107.108.10:1 agency1 1|10.107.108.11:1 agency1 2' '30501,30401,8641' 'rocksdb|pbft|10.107.108.47=192.168.0.123'
 ```
 
 ## 第四章 节点分发
@@ -125,7 +129,9 @@ param 4：transnodes
 
 param 5：具体格式为IP,用户名,密码   如果要分发到多个IP需要以竖线隔开进行配置
 
-IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2
+IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2,PORT,PROMPT
+
+PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 
 ### 4.3 执行脚本
 
@@ -152,7 +158,9 @@ param 4：start
 
 param 5：节点目录名，该参数可选，如果不传，则启动该IP下的所有节点，如果指定节点，则只启动该指定节点
 
-param 6：可为空，如果为空则只对当前IP进行操作。IP列表  格式为：  IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2
+param 6：可为空，如果为空则只对当前IP进行操作。IP列表  格式为：  IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2,PORT,PROMPT
+
+PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 
 ### 5.3 执行脚本
 
@@ -187,7 +195,9 @@ param 4：stop
 
 param 5：节点目录名，该参数可选，如果不传，则停止该IP下的所有节点，如果指定节点，则只停止该指定节点
 
-param 6：可为空，如果为空则只对当前IP进行操作。IP列表  格式为：  IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2
+param 6：可为空，如果为空则只对当前IP进行操作。IP列表  格式为：  IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2,PORT,PROMPT
+
+PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 
 ### 6.3 执行脚本
 
@@ -524,13 +534,13 @@ param 3：执行机器密码
 
 param 4：judge
 
-param 5：断言表达式
+param 5：断言表达式   如果是数字比较不用双引号，如果是字符串比较，则需要双引号
 
 ### 15.3 执行脚本
 
 ```shell
 dos2unix sh itools.sh
-#字符串比较变量test1和变量test2是否相等
+#字符串比较变量test1和变量test2是否相等  test1和test2为字符串
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'judge' '"${test1}"=="${test2}"'
 
 #数值比较变量test1和变量test2大小
