--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -138,6 +138,8 @@ PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 ```shell
 dos2unix sh itools.sh
 sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'transnodes' '10.107.108.47,wangyang,Aa12345!|10.107.108.10,wangyang,Aa12345!|10.107.108.11,wangyang,Aa12345!'
+#iplist里面的端口和提示符支持可传，默认端口为36000，默认提示符为]（Ubuntu机器的端口可能是22，提示符为:~）  以下涉及iplist传入的，都是此规则
+sh itools.sh '10.107.108.47' 'wangyang' 'Aa12345!' 'transnodes' '10.107.108.47,wangyang,Aa12345!,36000,[|10.107.108.10,wangyang,Aa12345!,36000,[|10.107.108.11,wangyang,Aa12345!,36000,['
 ```
 
 ## 第五章 启动节点
