--- a/区块链自动化脚本使用说明.md
+++ b/区块链自动化脚本使用说明.md
@@ -26,7 +26,7 @@ IP1,USERNAME1,PASSWD1|IP2,USERNAME2,PASSWD2,PORT,PROMPT
 
 PORT默认为36000    PROMPT默认为[    根据实际情况进行传入
 
-eg:10.107.96.109,gavin,Aa12345!,22,:~|10.107.96.108,gavin,Aa12345!,22,:~
+eg:10.107.96.109,gavin,Aa12345!,22,:~                                  109机器是Ubuntu
 
 ### 1.3 执行脚本
 
